# backend/api/gen/go/admin/service/v1/i_admin_portal.pb.redact.go
@@ -1,0 +1,114 @@
+// Code generated by protoc-gen-redact. DO NOT EDIT.
+// source: admin/service/v1/i_admin_portal.proto
+
+package adminpb
+
+import (
+	context "context"
+	redact "github.com/menta2k/protoc-gen-redact/v3/redact/v3"
+	permissionpb "go-wind-admin/api/gen/go/permission/service/v1"
+	annotations "google.golang.org/genproto/googleapis/api/annotations"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
+	fieldmaskpb "google.golang.org/protobuf/types/known/fieldmaskpb"
+	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
+)
+
+// Reference imports to suppress errors if they are not otherwise used.
+var (
+	_ grpc.Server
+	_ context.Context
+	_ redact.Redactor
+	_ codes.Code
+	_ status.Status
+	_ annotations.FieldBehavior
+	_ emptypb.Empty
+	_ timestamppb.Timestamp
+	_ fieldmaskpb.FieldMask
+	_ permissionpb.Menu
+)
+
+// RegisterRedactedAdminPortalServiceServer wraps the AdminPortalServiceServer with the redacted server and registers the service in GRPC
+func RegisterRedactedAdminPortalServiceServer(s grpc.ServiceRegistrar, srv AdminPortalServiceServer, bypass redact.Bypass) {
+	RegisterAdminPortalServiceServer(s, RedactedAdminPortalServiceServer(srv, bypass))
+}
+
+func RedactedAdminPortalServiceServer(srv AdminPortalServiceServer, bypass redact.Bypass) AdminPortalServiceServer {
+	if bypass == nil {
+		bypass = redact.Falsy
+	}
+	return &redactedAdminPortalServiceServer{srv: srv, bypass: bypass}
+}
+
+type redactedAdminPortalServiceServer struct {
+	UnsafeAdminPortalServiceServer
+	srv    AdminPortalServiceServer
+	bypass redact.Bypass
+}
+
+// GetNavigation is the redacted wrapper for the actual AdminPortalServiceServer.GetNavigation method
+// Unary RPC
+func (s *redactedAdminPortalServiceServer) GetNavigation(ctx context.Context, in *emptypb.Empty) (*ListRouteResponse, error) {
+	res, err := s.srv.GetNavigation(ctx, in)
+	if !s.bypass.CheckInternal(ctx) {
+		// Apply redaction to the response
+		redact.Apply(res)
+	}
+	return res, err
+}
+
+// GetMyPermissionCode is the redacted wrapper for the actual AdminPortalServiceServer.GetMyPermissionCode method
+// Unary RPC
+func (s *redactedAdminPortalServiceServer) GetMyPermissionCode(ctx context.Context, in *emptypb.Empty) (*ListPermissionCodeResponse, error) {
+	res, err := s.srv.GetMyPermissionCode(ctx, in)
+	if !s.bypass.CheckInternal(ctx) {
+		// Apply redaction to the response
+		redact.Apply(res)
+	}
+	return res, err
+}
+
+// GetInitialContext is the redacted wrapper for the actual AdminPortalServiceServer.GetInitialContext method
+// Unary RPC
+func (s *redactedAdminPortalServiceServer) GetInitialContext(ctx context.Context, in *emptypb.Empty) (*InitialContextResponse, error) {
+	res, err := s.srv.GetInitialContext(ctx, in)
+	if !s.bypass.CheckInternal(ctx) {
+		// Apply redaction to the response
+		redact.Apply(res)
+	}
+	return res, err
+}
+
+// Redact method implementation for ListRouteResponse
+func (x *ListRouteResponse) Redact() string {
+	if x == nil {
+		return ""
+	}
+
+	// Safe field: Items
+	return x.String()
+}
+
+// Redact method implementation for ListPermissionCodeResponse
+func (x *ListPermissionCodeResponse) Redact() string {
+	if x == nil {
+		return ""
+	}
+
+	// Safe field: Codes
+	return x.String()
+}
+
+// Redact method implementation for InitialContextResponse
+func (x *InitialContextResponse) Redact() string {
+	if x == nil {
+		return ""
+	}
+
+	// Safe field: Menus
+
+	// Safe field: Permissions
+	return x.String()
+}
