# backend/api/gen/go/admin/service/v1/i_router.pb.go
@@ -1,77 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.36.11
-// 	protoc        (unknown)
-// source: admin/service/v1/i_router.proto
-
-package adminpb
-
-import (
-	_ "github.com/google/gnostic/openapiv3"
-	v1 "go-wind-admin/api/gen/go/permission/service/v1"
-	_ "google.golang.org/genproto/googleapis/api/annotations"
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	emptypb "google.golang.org/protobuf/types/known/emptypb"
-	_ "google.golang.org/protobuf/types/known/fieldmaskpb"
-	_ "google.golang.org/protobuf/types/known/timestamppb"
-	reflect "reflect"
-	unsafe "unsafe"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-var File_admin_service_v1_i_router_proto protoreflect.FileDescriptor
-
-const file_admin_service_v1_i_router_proto_rawDesc = "" +
-	"\n" +
-	"\x1fadmin/service/v1/i_router.proto\x12\x10admin.service.v1\x1a$gnostic/openapi/v3/annotations.proto\x1a\x1cgoogle/api/annotations.proto\x1a\x1fgoogle/api/field_behavior.proto\x1a\x1bgoogle/protobuf/empty.proto\x1a\x1fgoogle/protobuf/timestamp.proto\x1a google/protobuf/field_mask.proto\x1a\"permission/service/v1/router.proto2\xf7\x01\n" +
-	"\rRouterService\x12g\n" +
-	"\tListRoute\x12\x16.google.protobuf.Empty\x1a(.permission.service.v1.ListRouteResponse\"\x18\x82\xd3\xe4\x93\x02\x12\x12\x10/admin/v1/routes\x12}\n" +
-	"\x12ListPermissionCode\x12\x16.google.protobuf.Empty\x1a1.permission.service.v1.ListPermissionCodeResponse\"\x1c\x82\xd3\xe4\x93\x02\x16\x12\x14/admin/v1/perm-codesB\xb9\x01\n" +
-	"\x14com.admin.service.v1B\fIRouterProtoP\x01Z1go-wind-admin/api/gen/go/admin/service/v1;adminpb\xa2\x02\x03ASX\xaa\x02\x10Admin.Service.V1\xca\x02\x10Admin\\Service\\V1\xe2\x02\x1cAdmin\\Service\\V1\\GPBMetadata\xea\x02\x12Admin::Service::V1b\x06proto3"
-
-var file_admin_service_v1_i_router_proto_goTypes = []any{
-	(*emptypb.Empty)(nil),                 // 0: google.protobuf.Empty
-	(*v1.ListRouteResponse)(nil),          // 1: permission.service.v1.ListRouteResponse
-	(*v1.ListPermissionCodeResponse)(nil), // 2: permission.service.v1.ListPermissionCodeResponse
-}
-var file_admin_service_v1_i_router_proto_depIdxs = []int32{
-	0, // 0: admin.service.v1.RouterService.ListRoute:input_type -> google.protobuf.Empty
-	0, // 1: admin.service.v1.RouterService.ListPermissionCode:input_type -> google.protobuf.Empty
-	1, // 2: admin.service.v1.RouterService.ListRoute:output_type -> permission.service.v1.ListRouteResponse
-	2, // 3: admin.service.v1.RouterService.ListPermissionCode:output_type -> permission.service.v1.ListPermissionCodeResponse
-	2, // [2:4] is the sub-list for method output_type
-	0, // [0:2] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
-}
-
-func init() { file_admin_service_v1_i_router_proto_init() }
-func file_admin_service_v1_i_router_proto_init() {
-	if File_admin_service_v1_i_router_proto != nil {
-		return
-	}
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: unsafe.Slice(unsafe.StringData(file_admin_service_v1_i_router_proto_rawDesc), len(file_admin_service_v1_i_router_proto_rawDesc)),
-			NumEnums:      0,
-			NumMessages:   0,
-			NumExtensions: 0,
-			NumServices:   1,
-		},
-		GoTypes:           file_admin_service_v1_i_router_proto_goTypes,
-		DependencyIndexes: file_admin_service_v1_i_router_proto_depIdxs,
-	}.Build()
-	File_admin_service_v1_i_router_proto = out.File
-	file_admin_service_v1_i_router_proto_goTypes = nil
-	file_admin_service_v1_i_router_proto_depIdxs = nil
-}
