# backend/api/gen/go/permission/service/v1/router.pb.redact.go
@@ -1,181 +1,0 @@
-// Code generated by protoc-gen-redact. DO NOT EDIT.
-// source: permission/service/v1/router.proto
-
-package permissionpb
-
-import (
-	context "context"
-	redact "github.com/menta2k/protoc-gen-redact/v3/redact/v3"
-	annotations "google.golang.org/genproto/googleapis/api/annotations"
-	grpc "google.golang.org/grpc"
-	codes "google.golang.org/grpc/codes"
-	status "google.golang.org/grpc/status"
-	emptypb "google.golang.org/protobuf/types/known/emptypb"
-	fieldmaskpb "google.golang.org/protobuf/types/known/fieldmaskpb"
-	timestamppb "google.golang.org/protobuf/types/known/timestamppb"
-)
-
-// Reference imports to suppress errors if they are not otherwise used.
-var (
-	_ grpc.Server
-	_ context.Context
-	_ redact.Redactor
-	_ codes.Code
-	_ status.Status
-	_ annotations.FieldBehavior
-	_ emptypb.Empty
-	_ timestamppb.Timestamp
-	_ fieldmaskpb.FieldMask
-)
-
-// RegisterRedactedRouterServiceServer wraps the RouterServiceServer with the redacted server and registers the service in GRPC
-func RegisterRedactedRouterServiceServer(s grpc.ServiceRegistrar, srv RouterServiceServer, bypass redact.Bypass) {
-	RegisterRouterServiceServer(s, RedactedRouterServiceServer(srv, bypass))
-}
-
-func RedactedRouterServiceServer(srv RouterServiceServer, bypass redact.Bypass) RouterServiceServer {
-	if bypass == nil {
-		bypass = redact.Falsy
-	}
-	return &redactedRouterServiceServer{srv: srv, bypass: bypass}
-}
-
-type redactedRouterServiceServer struct {
-	UnsafeRouterServiceServer
-	srv    RouterServiceServer
-	bypass redact.Bypass
-}
-
-// ListRoute is the redacted wrapper for the actual RouterServiceServer.ListRoute method
-// Unary RPC
-func (s *redactedRouterServiceServer) ListRoute(ctx context.Context, in *emptypb.Empty) (*ListRouteResponse, error) {
-	res, err := s.srv.ListRoute(ctx, in)
-	if !s.bypass.CheckInternal(ctx) {
-		// Apply redaction to the response
-		redact.Apply(res)
-	}
-	return res, err
-}
-
-// ListPermissionCode is the redacted wrapper for the actual RouterServiceServer.ListPermissionCode method
-// Unary RPC
-func (s *redactedRouterServiceServer) ListPermissionCode(ctx context.Context, in *emptypb.Empty) (*ListPermissionCodeResponse, error) {
-	res, err := s.srv.ListPermissionCode(ctx, in)
-	if !s.bypass.CheckInternal(ctx) {
-		// Apply redaction to the response
-		redact.Apply(res)
-	}
-	return res, err
-}
-
-// Redact method implementation for RouteItem
-func (x *RouteItem) Redact() string {
-	if x == nil {
-		return ""
-	}
-
-	// Safe field: Children
-
-	// Safe field: Path
-
-	// Safe field: Redirect
-
-	// Safe field: Alias
-
-	// Safe field: Name
-
-	// Safe field: Component
-
-	// Safe field: Meta
-	return x.String()
-}
-
-// Redact method implementation for RouteMeta
-func (x *RouteMeta) Redact() string {
-	if x == nil {
-		return ""
-	}
-
-	// Safe field: ActiveIcon
-
-	// Safe field: ActivePath
-
-	// Safe field: AffixTab
-
-	// Safe field: AffixTabOrder
-
-	// Safe field: Authority
-
-	// Safe field: Badge
-
-	// Safe field: BadgeType
-
-	// Safe field: BadgeVariants
-
-	// Safe field: HideChildrenInMenu
-
-	// Safe field: HideInBreadcrumb
-
-	// Safe field: HideInMenu
-
-	// Safe field: HideInTab
-
-	// Safe field: Icon
-
-	// Safe field: IframeSrc
-
-	// Safe field: IgnoreAccess
-
-	// Safe field: KeepAlive
-
-	// Safe field: Link
-
-	// Safe field: Loaded
-
-	// Safe field: MaxNumOfOpenTab
-
-	// Safe field: MenuVisibleWithForbidden
-
-	// Safe field: OpenInNewWindow
-
-	// Safe field: Order
-
-	// Safe field: Title
-	return x.String()
-}
-
-// Redact method implementation for ListRouteRequest
-func (x *ListRouteRequest) Redact() string {
-	if x == nil {
-		return ""
-	}
-	return x.String()
-}
-
-// Redact method implementation for ListRouteResponse
-func (x *ListRouteResponse) Redact() string {
-	if x == nil {
-		return ""
-	}
-
-	// Safe field: Items
-	return x.String()
-}
-
-// Redact method implementation for ListPermissionCodeRequest
-func (x *ListPermissionCodeRequest) Redact() string {
-	if x == nil {
-		return ""
-	}
-	return x.String()
-}
-
-// Redact method implementation for ListPermissionCodeResponse
-func (x *ListPermissionCodeResponse) Redact() string {
-	if x == nil {
-		return ""
-	}
-
-	// Safe field: Codes
-	return x.String()
-}
